Bug 165003 - Row height minimizes automaticaly at writing direction 90°
Summary: Row height minimizes automaticaly at writing direction 90°
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.8.4.2 release
Hardware: All All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:24.8.6 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Calc-Cells
  Show dependency treegraph
 
Reported: 2025-02-03 08:34 UTC by hartmut.brummack
Modified: 2025-03-29 18:22 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (55.52 KB, image/png)
2025-02-03 08:36 UTC, hartmut.brummack
Details
Testdatei - Zeile 5 in 90Grad formatiert (9.73 KB, application/vnd.oasis.opendocument.spreadsheet)
2025-02-04 07:49 UTC, hartmut.brummack
Details

Note You need to log in before you can comment on or make changes to this bug.
Description hartmut.brummack 2025-02-03 08:34:03 UTC
Description:
I change the writing direction of a row to 90°.
Calc minimizes the row height.

Steps to Reproduce:
1.Enter a text
2.Mark the row
3.Format the cells - writing direction 90°
4. OK

Actual Results:
Minimized height

Expected Results:
Height similar text length


Reproducible: Always


User Profile Reset: No

Additional Info:
[Information automatically included from LibreOffice]
Locale: de
Module: SpreadsheetDocument
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: no
Comment 1 hartmut.brummack 2025-02-03 08:36:20 UTC
Created attachment 198933 [details]
Screenshot
Comment 2 m_a_riosv 2025-02-03 17:40:47 UTC
Please attach a sample file, reduce the size as much as possible without private information, and paste the information in Menu/Help/About LibreOffice, there is a copy icon.
Comment 3 hartmut.brummack 2025-02-04 07:49:33 UTC
Created attachment 198957 [details]
Testdatei - Zeile 5 in 90Grad formatiert
Comment 4 m_a_riosv 2025-02-04 13:19:38 UTC
Reproducible
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 08e40accb3fabe676746c40797efc20eaa218801
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

Latest version that works on the ones I have installed.
Version: 24.2.7.2 (X86_64) / LibreOffice Community
Build ID: ee3885777aa7032db5a9b65deec9457448a91162
CPU threads: 16; OS: Windows 10.0 Build 26100; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded
Comment 5 Saburo 2025-02-04 23:22:48 UTC
bibisected with linux-64-24.8
first bad commit
source f91a411340ae204ce1e6997f22e0352a4c6a8355
Comment 6 BogdanB 2025-02-05 05:56:33 UTC
Noel, can you take a look?

commit f91a411340ae204ce1e6997f22e0352a4c6a8355	[log]
author	Noel Grandin <noelgrandin@gmail.com>	Thu May 23 15:09:52 2024 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Thu May 23 19:46:32 2024 +0200
tree 856e60c1d7bf972d020c0e2295326722dd84363a
parent fc3e2c8bba202a3ea3e92672f566d6ec16f18681 [diff]
reduce cost of calc column height calculation

avoid calling GetTextWidth unless we really need to

Change-Id: Ibb0f378e632fa3fce68b4819028630759baf4eb5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167988
Tested-by: Jenkins
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
Comment 7 Commit Notification 2025-02-11 13:39:27 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f2639e2a98f114f053a13da669440587d56a0dd8

tdf#165003 Row height wrong at writing direction 90°

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-02-11 14:46:36 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/ef385dbed89bbec4eac75f9fb6e1d348bc91fd03

tdf#165003 Row height wrong at writing direction 90°

It will be available in 24.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-02-11 14:59:49 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/f4ad405f8c93afaeb4281f43a6608c4aecca7249

tdf#165003 Row height wrong at writing direction 90°

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-02-11 21:21:56 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-5":

https://git.libreoffice.org/core/commit/4a334d519c3fb2b5cb9c59b3ea4adc3a22be5d58

tdf#165003 Row height wrong at writing direction 90°

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 m_a_riosv 2025-02-14 11:58:07 UTC
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 41ab24cecd6ad74312843f113d2faa13259cdb7d
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (es_ES); UI: en-US
Calc: CL threaded
Comment 12 Commit Notification 2025-02-18 11:02:11 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-2-1":

https://git.libreoffice.org/core/commit/3e9ff66ac2fbfa28e1f2ccc001f07a4545d13da9

tdf#165003 Row height wrong at writing direction 90°

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.