tdf#165003 Row height wrong at writing direction 90°

regression from
    commit f91a411340ae204ce1e6997f22e0352a4c6a8355
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Thu May 23 15:09:52 2024 +0200
    reduce cost of calc column height calculation

This also fixes another bug in the above commit where the code did not
update nValue for the "else if (bBreak && !bWidth)" case

Change-Id: I367a56c2cb555336e1d510efb0c7acac1447525f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181417
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit f2639e2a98f114f053a13da669440587d56a0dd8)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181422
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit f4ad405f8c93afaeb4281f43a6608c4aecca7249)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181435
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>